<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="UnwinderParameters_Typ" Id="{0f65d535-2614-4961-a14c-4af5a4d89c45}">
    <Declaration><![CDATA[TYPE UnwinderParameters_Typ :
STRUCT
	ForceDiameter:BOOL;
	ForcedDiameter:LREAL;
	
	EnableTension:BOOL;
	SetTension:REAL;
	
	kp:LREAL;
	TN:TIME;
	
	kpMove:LREAL;
	TNMove:TIME;
	
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>