<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="FailureReportMsgStruct" Id="{71f6f573-4e32-0fa5-35c9-c73d3396dfaf}">
    <Declaration><![CDATA[TYPE FailureReportMsgStruct :
STRUCT
	FailureType : USINT;
	FailureSubType : USINT;
	FailedUnitID : USINT;
	Severity : USINT;
	ErrorCode : UINT;
	SheetID : DINT;
	ReferenceID : UDINT;
	ActualValue : UINT;
	ViolatedThreshold : UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>